--- a/aminety.html
+++ b/aminety.html
@@ -162,47 +162,46 @@ Saturday: 8 am to 12 pm  <br>Since the floor is too big you dont need to worry a
       <div class="container">
 
         <div class="row maprow">
-            <div class="col-3 mapcol">
-                <div class="card mapcard" style="width: 100%;">
-                    <div class="mapcont" style="overflow: hidden;">
-                        <iframe title="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15719.130248438822!2d76.2838988871582!3d9.952040999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b087386c38af583%3A0x637db960f4c2dc73!2sDream%20Gym!5e0!3m2!1sen!2sin!4v1711353641777!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="card-body">
-                      <p class="card-text">ggsd locat kakkaanadu po kochu  688676</p>
-                      <p class="card-text">Ph:73647643734</p>
-                    </div>
+          <div class="col-3 mapcol">
+              <div class="card mapcard" style="width: 100%;">
+                  <div class="mapcont" style="overflow: hidden;">
+                      <iframe title="map"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15719.130248438822!2d76.2838988871582!3d9.952040999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b087386c38af583%3A0x637db960f4c2dc73!2sDream%20Gym!5e0!3m2!1sen!2sin!4v1711353641777!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
-            </div>
-
-            <div class="col-3 mapcol">
-                <div class="card mapcard" style="width: 100%;">
-                    <div class="mapcont" style="overflow: hidden;">
-                        <iframe title="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15719.130248438822!2d76.2838988871582!3d9.952040999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b087386c38af583%3A0x637db960f4c2dc73!2sDream%20Gym!5e0!3m2!1sen!2sin!4v1711353641777!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">ggsd locat kakkaanadu po kochu  688676</p>
-                        <p class="card-text">Ph:73647643734</p>
-                    </div>
+                  <div class="card-body">
+                    <p class="card-text">Vittila JUnction kakkaanadu po Kochi,Kerala  688676</p>
+                    <p class="card-text">Ph:9087659876</p>
                   </div>
-            </div>
+                </div>
+          </div>
 
-            <div class="col-3 mapcol">
-                <div class="card mapcard" style="width: 100%;">
-                    <div class="mapcont" style="overflow: hidden;">
-                        <iframe title="maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15719.130248438822!2d76.2838988871582!3d9.952040999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b087386c38af583%3A0x637db960f4c2dc73!2sDream%20Gym!5e0!3m2!1sen!2sin!4v1711353641777!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-                    </div>
-                    <div class="card-body">
-                        <p class="card-text">ggsd locat kakkaanadu po kochu  688676</p>
-                        <p class="card-text">Ph:73647643734</p>
-                    </div>
+          <div class="col-3 mapcol">
+              <div class="card mapcard" style="width: 100%;">
+                  <div class="mapcont" style="overflow: hidden;">
+                      <iframe title="map"  src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15719.130248438822!2d76.2838988871582!3d9.952040999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b087386c38af583%3A0x637db960f4c2dc73!2sDream%20Gym!5e0!3m2!1sen!2sin!4v1711353641777!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                   </div>
-            </div>
-        </div>
+                  <div class="card-body">
+                      <p class="card-text">Kaduvanthara junction kakkaanadu po Kochi  688676</p>
+                      <p class="card-text">Ph:6725354453</p>
+                  </div>
+                </div> 
+          </div>
 
-
+          <div class="col-3 mapcol">
+              <div class="card mapcard" style="width: 100%;">
+                  <div class="mapcont" style="overflow: hidden;">
+                      <iframe title="map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d15719.130248438822!2d76.2838988871582!3d9.952040999999996!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3b087386c38af583%3A0x637db960f4c2dc73!2sDream%20Gym!5e0!3m2!1sen!2sin!4v1711353641777!5m2!1sen!2sin" width="400" height="300" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  </div>
+                  <div class="card-body">
+                      <p class="card-text">Colorcode junction Punnappara po Alappuzha  688</p>
+                      <p class="card-text">Ph:9128384567</p>
+                  </div>
+                </div>
+          </div>
       </div>
 
 
+
+      </div>
      
       <div class="container">
         <div class="footer">
