--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
     <!------------nav bar------------------------------->
 
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid navcont">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary navmain">
+        <div class="container-fluid navcont navsub">
 
           <img src="./images/logo.jpg" class="logoimg" width="30" height="24" alt="Be proud gum image">
           <button class="navbar-toggler" type="button" 
@@ -62,8 +62,7 @@
       <!--------------------------------Main panel corousel-------------------------------------->
       <div class="container1">
         <div class="panelcontainer" style="width: 100%; margin-left: 1px;">
-            <video autoplay class="panelvideo" src="./images/bodybuilding.mp4" style="width: 100%;">
-              <track src="captions_en.vtt" kind="captions" srclang="en" label="english_captions"></video>
+              <div class="logohead" style="color: red;"><h2>HOLD THE BAR WITH US......</h2></div>
         </div>
       </div>
 
